# str-algorithms

./: Task_1.xml  КДЗ №2 - Отчет.docx  Ярных Р.В. - КДЗ 2 (БПИ141_2) .rar
CHW_2/: main.cpp
CHW_2/dict/: IDictionary.h  PTrieDictionary.h  TrieDictionary.h
CHW_2/fuzzy_search/: FuzzySearcher.h  QuickSearcher.h
CHW_2/spell_checkers/: SpellChecker.h
CHW_2/tree/: ITree.h  PTNode.h  PTrie.h  Trie.h
Ярных Р.В. - КДЗ 2 (БПИ141_2) /: README.rtf  КДЗ №2 - Отчет.docx
Ярных Р.В. - КДЗ 2 (БПИ141_2) /CHW_2/: CMakeLists.txt  main.cpp
Ярных Р.В. - КДЗ 2 (БПИ141_2) /CHW_2/dict/: HashDictionary.h  IDictionary.h  SetDictionary.h  TrieDictionary.h
Ярных Р.В. - КДЗ 2 (БПИ141_2) /CHW_2/fuzzy_search/: FuzzySearcher.h  NaiveSearcher.h  OptNaiveSearcher.h
Ярных Р.В. - КДЗ 2 (БПИ141_2) /CHW_2/spell_checkers/: SpellChecker.h
Ярных Р.В. - КДЗ 2 (БПИ141_2) /CHW_2/tree/: Trie.h
